<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, SavingKeeper!</string>
    <string name="app_name">SavingKeeper</string>
    <string name="str_title">Title</string>
    <string name="title_savinglistactivity">SavingList</string>
    <string name="str_bank">Bank</string>
    <string name="str_type">Type</string>
    <string name="str_note">Note</string>
    <string name="str_checkin">Checkin</string>
    <string name="menu_banklist">Bank List</string>
    <string name="menu_exit">Exit</string>
    <string name="title_banklist">Bank List</string>
    <string name="menu_addbank">Add Bank</string>
    <string name="menu_removebank">Remove Bank</string>
    <string name="title_add_bank">Input  bank title</string>
    <string name="title_remove_bank">Remove this bank ?</string>
    <string name="error_remove_bank">This bank is used, can not be removed now.</string>
    <string name="menu_addsaving">Add Saving</string>
    <string name="str_currency">Currency</string>
    <string name="title_add_saving">Add Saving</string>
    <string name="str_amount">Amount</string>
    <string name="str_rate">Rate</string>
    <string name="str_button_add">Add</string>
    <string name="str_button_edit">Update</string>
    <string name="str_button_remove">Remove</string>
    <string name="currency_rmb">RMB</string>
    <string name="currency_us">US</string>
    <string name="currency_eu">EU</string>
    <string name="title_ratelist">RateList</string>
    <string name="menu_addrate">Add Rate</string>
    <string name="menu_ratelist">Rate List</string>
    <string name="title_addrate">Rate Detail</string>
    <string name="str_start_date">Start Date</string>
    <string name="str_end_date">End Date</string>
    <string name="title_setdate">...</string>
    <string name="title_type_current">Demand deposits</string>
    <string name="title_type_fixed_m3">3 Months Time deposits</string>
    <string name="title_type_fixed_m6">6 Months Time deposits</string>
    <string name="title_type_fixed_y1">1 Year Time deposits</string>
    <string name="title_type_fixed_y2">2 Year Time deposits</string>
    <string name="title_type_fixed_y3">3 Year Time deposits</string>
    <string name="title_type_fixed_y5">5 Year Time deposits</string>
    <string name="str_default_money">0.00</string>
    <string name="title_reteremove">Remove this rate data</string>
    <string name="title_savingremove">Remove</string>
    <string name="title_remove_saving">Remove</string>
    <string name="menu_saving_edit">Edit</string>
    <string name="menu_saving_remove">Remove</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_chgpasswd">Change Password</string>
    <string name="menu_about">About</string>
    <string name="title_about">About..</string>
    <string name="title_chgpasswd">Change Password</string>
    <string name="title_old_passwd">Old Password</string>
    <string name="title_new_passwd">New Password</string>
    <string name="title_retype_passwd">Retype Password</string>
    <string name="str_btn_login">Login</string>
    <string name="str_version">12.06.04</string>
    <string name="title_passwd">Password</string>
    <string name="menu_showtotal">Total</string>
    <string name="str_total_savings">Total Savings</string>
    <string name="str_total_current_savings">Total Current Savings</string>
    <string name="str_total_maturity_savings">Total Maturity Fixed Savings</string>
    <string name="str_total_nonmaturity_savings">Total Non-maturity Fixed Savings</string>
    <string name="str_savings_total">Saving Sum</string>
    <string name="str_savings_amount">Total Amount</string>
    <string name="str_savings_amount_now">Current Amount</string>
    <string name="str_savings_amount_end">Maturity Amount</string>
    <string name="title_savings_total">Savings Statistic</string>
    <string name="str_back">Back</string>
    <string name="menu_reset_bank">Reset default list</string>
    <string name="menu_reset_rate">Reset default list</string>
    <string name="menu_export">Export</string>
    <string name="menu_import_all">Import All</string>
    <string name="menu_import_part">Import Part</string>
    <string name="title_dir">Directory</string>
    <string name="str_filename">File</string>
</resources>
