<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:layout_height="wrap_content" android:text="@string/str_title" android:id="@+id/textView1" android:layout_width="wrap_content"></TextView>
    <AutoCompleteTextView android:id="@+id/autoCompleteTextView1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="AutoCompleteTextView"></AutoCompleteTextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1">
        <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_weight="2" android:text="@string/str_amount"></TextView>
        <TextView android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:text="@string/str_currency"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout2">
        <EditText android:text="EditText" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/editText2" android:layout_weight="2" android:inputType="numberDecimal" android:singleLine="true" android:maxLength="10"></EditText>
        <Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/spinner1" android:layout_weight="1"></Spinner>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout3">
        <TextView android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_weight="2" android:text="@string/str_type"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_weight="1" android:text="@string/str_rate"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout4">
        <Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/spinner2" android:layout_weight="2"></Spinner>
        <EditText android:text="EditText" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/editText1" android:editable="false" android:singleLine="true" android:enabled="true" android:layout_weight="1"></EditText>
    </LinearLayout>
    <TextView android:layout_height="wrap_content" android:text="@string/str_checkin" android:id="@+id/textView7" android:layout_width="wrap_content"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout5">
        <EditText android:text="EditText" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/editText3" android:layout_weight="3"></EditText>
        <Button android:id="@+id/button1" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Button"></Button>
    </LinearLayout>
    <TextView android:layout_height="wrap_content" android:text="@string/str_note" android:id="@+id/textView8" android:layout_width="wrap_content"></TextView>
    <MultiAutoCompleteTextView android:text="MultiAutoCompleteTextView" android:id="@+id/multiAutoCompleteTextView1" android:layout_width="fill_parent" android:layout_height="fill_parent"></MultiAutoCompleteTextView>
</LinearLayout>
