<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="fill_parent" android:layout_width="fill_parent">
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent" android:orientation="vertical" android:id="@+id/mainLayout" android:layout_width="fill_parent" android:layout_marginRight="4dp">
    <TextView android:layout_height="wrap_content" android:text="@string/str_title" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_weight="1"></TextView>
    <AutoCompleteTextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/textTitle" android:layout_weight="1"></AutoCompleteTextView>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_weight="1">
        <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/str_amount" android:layout_weight="2"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:text="@string/str_currency" android:layout_weight="1"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout2" android:layout_weight="1">
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="2" android:inputType="numberDecimal" android:singleLine="true" android:maxLength="10" android:id="@+id/textAmount" android:text="0.00"></EditText>
        <Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/listCurrency"></Spinner>
    </LinearLayout>
    <TextView android:text="@string/str_checkin" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/textView7"></TextView>
    <LinearLayout android:layout_weight="1" android:layout_width="fill_parent" android:id="@+id/linearLayout5" android:layout_height="wrap_content">
        <EditText android:layout_height="wrap_content" android:layout_weight="3" android:layout_width="wrap_content" android:id="@+id/textCheckin"></EditText>
        <Button android:id="@+id/btnCheckin" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="wrap_content" android:text="..."></Button>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout3" android:layout_weight="1">
        <TextView android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_weight="2" android:text="@string/str_type"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_weight="1" android:text="@string/str_rate"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout4" android:layout_weight="1">
        <Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="2" android:id="@+id/listType"></Spinner>
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:editable="false" android:singleLine="true" android:enabled="true" android:layout_weight="1" android:id="@+id/textRate" android:text="0.00%" android:inputType="none"></EditText>
    </LinearLayout>
    <TextView android:text="@string/str_bank" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView6"></TextView>
    <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/listBank"></Spinner>
    <TextView android:layout_height="wrap_content" android:text="@string/str_note" android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_weight="1"></TextView>
    <MultiAutoCompleteTextView android:layout_width="fill_parent" android:id="@+id/textNote" android:layout_height="wrap_content" android:layout_weight="1"></MultiAutoCompleteTextView>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginRight="15dp" android:layout_marginLeft="15dp" android:drawableLeft="@drawable/android:ic_input_add" android:layout_weight="1" android:id="@+id/btnAction"></Button>
</LinearLayout>
</ScrollView>
