<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="fill_parent" android:layout_width="fill_parent">
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_old_passwd"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/editText1" android:layout_width="fill_parent" android:inputType="textPassword"></EditText>
    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_new_passwd"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/editText2" android:layout_width="fill_parent" android:inputType="textPassword"></EditText>
    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_retype_passwd"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/editText3" android:layout_width="fill_parent" android:inputType="textPassword"></EditText>
</LinearLayout>
</ScrollView>